# Freesound-CLI

./: README.md  audio_player.py  freesound.py  pyproject.toml  rich_util_freesound.py
