[tool.poetry]
name = "api-explorer"
version = "0.1.0"
description = "To discover what APIs can do"
authors = ["Longman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
rich = "^14.0.0"
sounddevice = "^0.5.2"
soundfile = "^0.13.1"
numpy = "^2.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
